# covald-dashboard

./: .gitignore  pyproject.toml
test_django/: settings.py
