[tool.poetry]
name = "test_django"
version = "0.1.0"
description = ""
authors = ["Covald <rezin.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
ipython = "^7.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
